@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.12.11-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-12-11 19:14:07, took 00:14:14, with 80 workers, on 3408 cases, 0 failed, 0 traces, 9 retries
+-;-;-;2023-12-11 21:39:47, took 00:11:45, with 80 workers, on 3408 cases, 0 failed, 0 traces, 13 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
