@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.12.11-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-12-11 19:14:07, took 00:14:14, with 80 workers, on 3408 cases, 0 failed, 0 traces, 9 retries<br/>
+tested: 2023-12-11 21:39:47, took 00:11:45, with 80 workers, on 3408 cases, 0 failed, 0 traces, 13 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
