@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.12.11-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-12-11 19:25:04, took 00:10:41, with 60 workers, on 528 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2023-12-11 21:47:12, took 00:07:09, with 60 workers, on 528 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
