@@ -527,7 +527,6 @@ qc pass: p4lang: l3vpn over tmux mpls
 qc pass: p4lang: sdwan over ipv4 with tmux
 qc pass: p4lang: sdwan over ipv6 with tmux
 todo: image viewer to file manager
-todo: game butterfly hanoy, modem, mdev
 todo: acl to have fake knob that syn-rst, udp-port-unreach, at the dataplanes
 todo: inspection dropped sessions do be able to close the sessions properly at layer4
 todo: consider draft-ietf-idr-performance-routing
